2017-01-30  Gerrit Holl  <g.holl@reading.ac.uk>

	* setup.py:

	- Add support for Python 3.6 in addition to Python 3.5
	- Add dependency on xarray (≥ 0.8, apparently the version in conda)

	* typhon/datasets/_tovs_defs.py:

	- Uncomment scale_factor 1, was causing ints to become floats upon
	unpacking
	- Rename dimension “scanline” to “time” for more consistent processing

	* typhon/datasets/tovs.py:

	- Rename here too

	* typhon/datasets/dataset.py(DatasetDeque):

	- New class to aid moving through a large dataset in a deque-like
	way, i.e. when you read additional data at the tail, correspondingly
	time period of data gets removed at the head.

2017-01-27  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Move definition of how to encode HIRS in xarray Dataset to the
	definitions module.

	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):

	- Make more flexible, can skip dimensions so we can use it with
	collocations, for example.  Set encoding values for efficient storage
	in NetCDF4.  Improved documentation.

	* typhon/physics/units/common.py:

	- Fixed bug that caused radiance_units["ir"] to be a Quantity with
	magnitude 1, rather than a Unit.

2017-01-26  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py(express_uncertainty):

	- bugfix, don't stop at Function because an expression is also a
	Function so it will stop immediately, oops.  Also make sure we return
	immediately if passed a symbol or indexed.

	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):

	- New method that converts to an xarray dataset.  Still work in
	progress but appears to work sometimes.  Makes it very easy to write
	to NetCDF4.

2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py: Small bugfixes

2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS):

	- Started implementing improved overlap choice.  Work in progress.

2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>
